Fixed Status and more GUI (i hate wpf)

--- a/Steam Apps Manager/GUI/MainWindow.xaml
+++ b/Steam Apps Manager/GUI/MainWindow.xaml
@@ -5,19 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Steam_Apps_Manager"
         mc:Ignorable="d"
-        Title="Steam Apps Manager" Height="391" Width="638" ResizeMode="NoResize" Initialized="Window_Initialized">
-    <Grid>
+        Title="Steam Apps Manager" Height="376" Width="638" ResizeMode="NoResize" Initialized="Window_Initialized">
+    <Grid Margin="0,0,0,-4">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="65*"/>
             <ColumnDefinition Width="251*"/>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="listBox" Height="150" Margin="16,10,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2" HorizontalContentAlignment="Center"/>
-        <GroupBox x:Name="groupBox" Header="App informations" Margin="15,165,10,0" VerticalAlignment="Top" Height="155" Grid.ColumnSpan="2" HorizontalContentAlignment="Center">
-            <StackPanel Height="135" Width="587" Margin="10,10,-2,-12">
-                <Label x:Name="label" Content="Please select an app in the list to move it." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,45,0,0"/>
-            </StackPanel>
+        <ListBox x:Name="listBox" Height="149" Margin="16,10,16,0" VerticalAlignment="Top" Grid.ColumnSpan="2" SelectionChanged="listBox_SelectionChanged"/>
+        <GroupBox x:Name="groupBox" Margin="15,165,16,0" VerticalAlignment="Top" Height="150" Grid.ColumnSpan="2" HorizontalContentAlignment="Center" Header="App informations">
+            <Grid Height="135" Width="587" Margin="10,10,10,-12">
+                <Grid x:Name="welcomeLabelGrid"  Height="129" Margin="0,0,10,0">
+                    <Label x:Name="label" Content="Please select an app in the list." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,-12,0,0"/>
+                </Grid>
+                <StackPanel x:Name="infosGrid" Height="129" Margin="0,0,10,0" Visibility="Hidden">
+                    <Label x:Name="appNameLabel" Content="App name" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
+                    <Label x:Name="appPathLabel" Content="Currently installed in C:\Program Files (x86)\Steam\steamapps" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontStyle="Italic"/>
+                    <Label x:Name="appStatusLabel" Content="This app needs to be updated before moving it. Please open Steam and update this app." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
+                    <Button x:Name="appMoveButton" Content="Move this app now" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Grid>
         </GroupBox>
-        <Label x:Name="label1" Content="Steam Apps Manager by natinusala" HorizontalAlignment="Left" Margin="262,320,0,0" VerticalAlignment="Top" Width="230" Grid.Column="1" HorizontalContentAlignment="Right"/>
+        <Label x:Name="label1" Content="Steam Apps Manager by natinusala" HorizontalAlignment="Left" Margin="256,312,0,0" VerticalAlignment="Top" Width="230" Grid.Column="1" HorizontalContentAlignment="Right"/>
 
     </Grid>
 </Window>
