--- a/Steam Apps Manager/GUI/MainWindow.xaml
+++ b/Steam Apps Manager/GUI/MainWindow.xaml
@@ -21,7 +21,7 @@
                     <Label x:Name="appNameLabel" Content="App name" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
                     <Label x:Name="appPathLabel" Content="Currently installed in C:\Program Files (x86)\Steam\steamapps" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontStyle="Italic"/>
                     <Label x:Name="appStatusLabel" Content="This app needs to be updated before moving it. Please open Steam and update this app." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
-                    <Button x:Name="appMoveButton" Content="Move this app now" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Button x:Name="appMoveButton" Content="Move this app" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
