--- a/Steam Apps Manager/GUI/MainWindow.xaml
+++ b/Steam Apps Manager/GUI/MainWindow.xaml
@@ -17,10 +17,11 @@
                 <Grid x:Name="welcomeLabelGrid"  Height="129" Margin="0,0,10,0">
                     <Label x:Name="label" Content="Please select an app in the list." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,-12,0,0"/>
                 </Grid>
-                <StackPanel x:Name="infosGrid" Height="129" Margin="0,0,10,0" Visibility="Hidden">
+                <StackPanel x:Name="infosGrid" Height="129" Margin="0,0,10,0"  Visibility="Hidden">
                     <Label x:Name="appNameLabel" Content="App name" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
                     <Label x:Name="appPathLabel" Content="Currently installed in C:\Program Files (x86)\Steam\steamapps" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontStyle="Italic"/>
-                    <Label x:Name="appStatusLabel" Content="This app needs to be updated before moving it. Please open Steam and update this app." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
+                    <Label x:Name="appSizeLabel" Content="Size on disk : n/a" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontStyle="Italic"/>
+                    <Label x:Name="appStatusLabel" Content="This app needs to be updated before moving it. Please open Steam and update it." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0" FontWeight="Bold"/>
                     <Button x:Name="appMoveButton" Content="Move this app" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 </StackPanel>
             </Grid>
